--- a/theme.less
+++ b/theme.less
@@ -1,3 +1,2 @@
-@import "../nodebb-theme-vanilla/less/vanilla";
-@import "../nodebb-theme-vanilla/modules";
+import "../nodebb-theme-vanilla/theme";
 @import "./less/style";
