--- a/less/topic.less
+++ b/less/topic.less
@@ -99,10 +99,16 @@
 
 	.posts {
 
+    .post-wrapper {
+      border: 1px solid rgba(0, 0, 0, 0.06);
+    }
+
+    .post-block {
+      border-left: 1px solid rgba(0, 0, 0, 0.06);
+    }
+
 		.post-info, .post-block {
 			position: relative;
-			border: 1px solid rgba(0, 0, 0, 0.06);
-			border-radius: 0 0 5px 5px;
 			padding: 10px;
 
 			.post-signature {
@@ -123,24 +129,23 @@
 			}
 		}
 
+    .topic-buttons {
+      background: rgba(0, 0, 0, 0.02);
+      border: 1px solid rgba(0, 0, 0, 0.06);
+      margin: 0;
+      padding: 8px 0 0 23px;
+      clear: both;
+
+      button.show {
+        display: inline-block !important;
+      }
+
+      @media (max-width: 767px) {
+        padding-left: 9px;
+      }
+    }
+
 		.post-block {
-			border-radius: 5px;
-			margin-bottom: 15px;
-
-			.topic-buttons {
-				background: rgba(0, 0, 0, 0.02);
-				border: 1px solid rgba(0, 0, 0, 0.06);
-				margin: -5px 0 0 0;
-				padding: 8px 0 0 23px;
-
-				button.show {
-					display: inline-block !important;
-				}
-
-				@media (max-width: 767px) {
-					padding-left: 9px;
-				}
-			}
 
 			.post-content {
 				padding: 10px 5px 0 5px;
@@ -181,16 +186,25 @@
 			display: none;
 		}
 
+    .post-header {
+      height: 40px;
+      width: 100%;
+      display: block;
+      background: linear-gradient(to right, rgba(207, 36, 106, 1) 0%, rgba(255, 148, 46, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+      border-left: 1px solid #cf246a;
+      border-right: 1px solid #ff942e;
+    }
+
+    .topic-buttons {
+      margin: 0px;
+      border: 0;
+      border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+      padding: 8px 9px 7px 23px;
+    }
+
 		.post-block {
 			.post-signature {
 				margin-left: 15px;
-			}
-
-			.topic-buttons {
-				margin: -11px -10px 0px -10px;
-				border: 0;
-				border-bottom: 1px solid rgba(0, 0, 0, 0.06);
-				padding: 8px 9px 7px 23px;
 			}
 
 			.post-content {
@@ -239,21 +253,23 @@
 			min-height: 80px;
 		}
 
+    .topic-buttons {
+
+      @media (max-width: 767px) {
+        margin-left: -11px;
+        border-left: 0;
+      }
+
+      button.show {
+        display: inline-block!important;
+      }
+    }
+
 		.post-block {
 			>h3 {
 				margin:0px;
 			}
-			.topic-buttons {
 
-				@media (max-width: 767px) {
-					margin-left: -11px;
-					border-left: 0;
-				}
-
-				button.show {
-					display: inline-block!important;
-				}
-			}
 		}
 	}
 
