--- a/less/topic.less
+++ b/less/topic.less
@@ -62,7 +62,7 @@
 		padding: 0;
 
 		> li {
-			padding-bottom: 10px;
+			margin-bottom: 30px;
 
 			&.deleted {
 				-moz-opacity: 0.30;
@@ -187,7 +187,7 @@
 		}
 
     .post-header {
-      height: 40px;
+      height: 34px;
       width: 100%;
       display: block;
       background: linear-gradient(to right, rgba(207, 36, 106, 1) 0%, rgba(255, 148, 46, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
