Little fix padding home

--- a/less/style.less
+++ b/less/style.less
@@ -194,6 +194,11 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 	}
 }
 
+.padding15{
+	padding-left: 5px;
+	padding-right: 5px;
+} 
+
 //START: FIXES FOR BS3, may need to remove these when we get out of the RC releases
 @media (max-width: 979px) {
 	.hidden-mobile {
