--- a/less/header.less
+++ b/less/header.less
@@ -20,8 +20,7 @@
 	.forum-logo {
 		float: left;
 		max-height: 50px;
-		padding-bottom: 5px;
-		padding-top: 5px;
+		padding: 5px;
 		width: auto;
 	}
 
