--- a/less/topic.less
+++ b/less/topic.less
@@ -110,6 +110,10 @@
 
 		.profile-image-block {
 			border-right: 1px solid #eee;
+
+			h3 a {
+				color: #cf246a;
+			}
 		}
 
 		.post-info, .post-block {
@@ -140,7 +144,6 @@
       margin: 0;
       padding: 8px 0 0 23px;
       clear: both;
-			overflow: auto;
 
       button.show {
         display: inline-block !important;
@@ -199,6 +202,12 @@
       background: linear-gradient(to right, rgba(207, 36, 106, 1) 0%, rgba(255, 148, 46, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
       border-left: 1px solid #cf246a;
       border-right: 1px solid #ff942e;
+
+			.post-time {
+				float: right;
+				color: white;
+				padding: 5px;
+			}
     }
 
     .topic-buttons {
