--- a/less/footer.less
+++ b/less/footer.less
@@ -1,18 +1,30 @@
-.footer {
-	text-align: center;
-	-webkit-transition: opacity 200ms linear;
-	-moz-transition: opacity 200ms linear;
-	-ms-transition: opacity 200ms linear;
-	-o-transition: opacity 200ms linear;
-	transition: opacity 200ms linear;
-
-	.copyright {
-		padding-bottom: 10px;
-	}
-
-	&.ajaxifying {
-		-moz-opacity: 0.00;
-		opacity: 0.00;
-		-ms-filter:~"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-	}
+#footer {
+    clear:both;
+    margin-top:14px;
+    margin-bottom:14px;
+    text-align:right;
+    display:block;
+    padding:10px 0 0 0;
+    border-bottom:1px solid #e4e4e4;
+    color:#d8d8d8;
+    border-top:1px solid #e4e4e4;
+    a {
+        color:#8D8D8D;
+    }
+    a:hover {
+        color:#cf246a;
+    }
+    .footer_links {
+        li {
+            line-height:24px;
+            display:inline;
+            list-style:outside none none;
+        }
+    }
+    .footer_links.left {
+        margin-top:0;
+        float:left;
+        text-align:left;
+        padding-left:0;
+    }
 }
