--- a/less/style.less
+++ b/less/style.less
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300italic,600&subset=latin,cyrillic-ext);
+
 .brand-primary {
 	color: @brand-primary;
 }
@@ -21,18 +23,27 @@
 
 html {
 	overflow-y: scroll;
+	background: #f6f6f6;
 }
 
 body {
-	@media (min-width: 979px)
-	{
-		padding-top: 70px;
+	font-size: 13px;
+	color: #3e3e3e;
+	line-height: 1.23;
+	font-family: "Open Sans",sans-serif;
+	background: none;
+	width: 92%;
+	min-width: 650px;
+	margin: 0 auto;
+	
+	a {
+		color: #cf246a;
+		text-decoration: none;
 	}
-
-	@media (max-width: 979px)
-	{
-		padding-top: 70px;
-		padding-bottom: 50px;
+	
+	a:hover {
+		color: #cf246a;
+		text-decoration: underline;
 	}
 }
 
