--- a/less/header.less
+++ b/less/header.less
@@ -239,30 +239,42 @@
 #header #top_header #toplinks ul.isuser &>li:first-child,.toplinks ul.isuser &>li:first-child a {
     padding-right:0;
 }
-#header-menu {
-    background-color:#2E3539;
-    border: none;
-    box-shadow: none;
-    transition:all 0.5s ease;
-    z-index: 9999;
-    .loading-bar {
-        background:linear-gradient(to right, rgb(207, 36, 106) 0px, rgb(255, 148, 46) 100%) repeat scroll 0px 0px transparent;
-        height: 3px;
-    }
+#navbar-wrapper{
+	min-height: 61px;
+	#header-menu {
+	    background-color:#2E3539;
+	    border: none;
+	    box-shadow: none;
+	    transition:all 0.5s ease;
+	    z-index: 9999;
+	    border-radius: 0;
+		.loading-bar {
+		 	width: 0%;
+		 	position: absolute;
+		 	left: 0px;
+		 	height: 3px;
+		 	background: linear-gradient(to right, rgb(207, 36, 106) 0px, rgb(255, 148, 46) 100%) repeat scroll 0px 0px transparent;
+		 	z-index: 1;
+		 	-webkit-transition: width 0.2s ease-in;
+		 	-moz-transition: width 0.2s ease-in;
+		 	-o-transition: width 0.2s ease-in;
+		 	-ms-transition: width 0.2s ease-in;
+		 	transition: width 0.2s ease-in;
+		}
+	}
+	#header-menu.affix {
+	    margin:0;
+	    width:100%;
+	    padding:0 4%;
+	    margin:0 -4%;
+	    transition:all 0.5s ease;
+	    top: 0;
+	}
+	#header-menu .navbar-nav &>li &>a:hover,#header-menu .navbar-nav &>li &>a:focus {
+	    color:#929292;
+	    background-color:#232323;
+	}
 }
-#header-menu.affix {
-    margin:0;
-    width:100%;
-    padding:0 4%;
-    margin:0 -4%;
-    transition:all 0.5s ease;
-    top: 0;
-}
-#header-menu .navbar-nav &>li &>a:hover,#header-menu .navbar-nav &>li &>a:focus {
-    color:#929292;
-    background-color:#232323;
-}
-
 .header {
 
 	#user_label {
