--- a/less/header.less
+++ b/less/header.less
@@ -270,7 +270,7 @@
 	    transition:all 0.5s ease;
 	    top: 0;
 	}
-	#header-menu .navbar-nav &>li &>a:hover,#header-menu .navbar-nav &>li &>a:focus {
+	#header-menu .navbar-nav > li > a:hover,#header-menu .navbar-nav > li > a:focus {
 	    color:#929292;
 	    background-color:#232323;
 	}
