[Core] LESS variables MORE fun

--- a/less/footer.less
+++ b/less/footer.less
@@ -5,14 +5,14 @@
     text-align:right;
     display:block;
     padding:10px 0 0 0;
-    border-bottom:1px solid #e4e4e4;
-    color:#d8d8d8;
-    border-top:1px solid #e4e4e4;
+    border-bottom:1px solid @exodo-border-color;
+    color: #d8d8d8;
+    border-top:1px solid @exodo-border-color;
     a {
-        color:#8D8D8D;
+        color: @exodo-lightdark;
     }
     a:hover {
-        color:#cf246a;
+        color: @exodo-primary;
     }
     .footer_links {
         li {
