nickname is now a dropdown
nickname is now a dropdown

--- a/less/topic.less
+++ b/less/topic.less
@@ -111,9 +111,14 @@
 		.profile-image-block {
 			border-right: 1px solid #eee;
 
-			h3 a {
-				word-wrap: break-word;
-				color: #cf246a;
+			.nickname {
+				display: block;
+
+				h3 span.username-field {
+					word-wrap: break-word;
+					color: #cf246a;
+					cursor: pointer;
+				}
 			}
 		}
 
