--- a/less/category.less
+++ b/less/category.less
@@ -80,6 +80,88 @@
 		}
 	}
 
+	/*modificado*/
+	.title_forum {
+		padding: 0;
+
+		h1 {
+			padding: 0;
+			margin: 10px 0 5px;
+			font-size: 21px;
+		}
+	}
+
+	.no-p {
+			padding: 0;
+	}
+
+	.new_post_btn {
+		background: #2E3539 none;
+		-moz-border-radius: 0px;
+		-webkit-border-radius: 0px;
+		border-radius: 0px;
+		font: normal 13px ;
+		color: #fff;
+		padding: 0px 0px 0px 12px;
+		border: 0  ;
+		display: block;
+		float: right;
+		line-height: 32px;
+		height: 32px;
+
+		&:hover {
+			background: #2E3539 none;
+			color: rgb(255, 255, 255);
+			text-decoration: none;
+			box-shadow: 0 0 0 3px #E4E4E4;
+		}
+
+		span {
+			padding: 0 10px;
+			font:  normal 13px ;
+			font-size:16px;
+			font-weight:bold;
+			display:inline-block;
+			background-color: #cf246a;
+			height: 32px;
+			line-height: 32px;
+			font-weight: bold;
+			margin-left: 5px;
+		}
+	}
+
+	.category-tools-button {
+		width: 100%;
+		display: block;
+		background: white;
+		border: 1px solid #d4d4d4;
+		height: 30px;
+
+		.tool {
+			background: none;
+			font-size: 14px;
+			color: #838383;
+			line-height: 30px;
+			height: 30px;
+			padding: 0;
+			margin: 0 7px;
+			border: none;
+		}
+	}
+
+	.list-post-header {
+		height: 34px;
+		width: 100%;
+		display: block;
+		background: linear-gradient(to right, rgba(207, 36, 106, 1) 0%, rgba(255, 148, 46, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
+		border-left: 1px solid #cf246a;
+		border-right: 1px solid #ff942e;
+	}
+
+
+
+	/*modificado*/
+
 	.latest-post {
 		float: right;
 		padding-top: 2px;
@@ -140,7 +222,7 @@ h4.category-title {
 	.pointer;
 	margin-bottom: 10px;
 	overflow:hidden;
-	
+
 	&:hover {
 		filter: brightness(115%);
 		-webkit-filter: brightness(115%);
