--- a/less/category.less
+++ b/less/category.less
@@ -41,12 +41,12 @@
 
 	.topic-row {
 
-		border-radius: 5px;
+		border-radius: 0;
 		padding: 5px 10px 5px 10px;
 
 		small {
 			vertical-align: 2px;
-			font-size: 14px;
+			font-size: 12px;
 		}
 
 		h3 {
@@ -64,18 +64,18 @@
 
 			.topic-title {
 				width: 100%;
-				font-size: 20px;
+				font-size: 14px;
 			}
 		}
 
 		.teaser-pic {
-			width:20px;
-			height:20px;
+			width: 15px;
+			height: 15px;
 		}
 
 		.user-img {
-			width: 50px;
-			height: 50px;
+			width: 25px;
+			height: 25px;
 			margin-right:10px;
 		}
 	}
@@ -274,3 +274,22 @@ h4.category-title {
 	background-size: contain!important;
 	background-position: center!important;
 }
+
+/* modificado */
+.pinned {
+	.topic-row {
+		background: #f6f6f6;
+	}
+}
+
+.unread {
+	.topic-row {
+		border-left: 2px solid @exodo-secondary;
+	}
+}
+
+.panel {
+	border-top: none;
+	margin-bottom: 0;
+}
+/* modificado */
