--- a/less/tags.less
+++ b/less/tags.less
@@ -16,11 +16,16 @@
 	font-size: 75%;
 	font-weight: 700;
 	white-space: nowrap;
+
+	&:hover {
+		color: @exodo-primary;
+		text-decoration: none;
+	}
 }
 
 .tag-topic-count {
-	border: solid 1px lighten(@brand-primary, 20%);
-	background-color: lighten(@brand-primary, 20%);
+	border: solid 1px @exodo-primary;
+	background-color: @exodo-primary;
 	color: #FFFFFF;
 	padding: .2em .6em .3em;
 	font-size: 75%;
@@ -31,4 +36,10 @@
 	padding-left: 5px;
 	border-bottom-right-radius: 5px;
 	border-top-right-radius: 5px;
+	margin-right: 2px;
+
+	&:hover {
+		color: @exodo-primary;
+		text-decoration: none;
+	}
 }
