--- a/less/category.less
+++ b/less/category.less
@@ -292,4 +292,10 @@ h4.category-title {
 	border-top: none;
 	margin-bottom: 0;
 }
+
+.category-tools {
+	.breadcrumb {
+		background: none;
+	}
+}
 /* modificado */
