--- a/less/header.less
+++ b/less/header.less
@@ -256,6 +256,9 @@
 		 	-ms-transition: width 0.2s ease-in;
 		 	transition: width 0.2s ease-in;
 		}
+		.container-fluid {
+			padding: 0;
+		}
 	}
 	#header-menu.affix {
 	    margin:0;
