--- a/less/bootstrap/variables.less
+++ b/less/bootstrap/variables.less
@@ -744,8 +744,8 @@
 //
 //##
 
-@breadcrumb-padding-vertical:   8px;
-@breadcrumb-padding-horizontal: 15px;
+@breadcrumb-padding-vertical:   0;
+@breadcrumb-padding-horizontal: 0;
 //** Breadcrumb background color
 @breadcrumb-bg:                 #f5f5f5;
 //** Breadcrumb text color
@@ -753,7 +753,7 @@
 //** Text color of current page in the breadcrumb
 @breadcrumb-active-color:       @gray-light;
 //** Textual separator for between breadcrumb elements
-@breadcrumb-separator:          "/";
+@breadcrumb-separator:          "→";
 
 
 //== Carousel
