--- a/less/style.less
+++ b/less/style.less
@@ -82,7 +82,7 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 }
 
 #content{
-	padding-bottom:20px;
+	padding: 20px 0;
 	-webkit-transition: opacity 100ms linear;
 	-moz-transition: opacity 100ms linear;
 	-ms-transition: opacity 100ms linear;
