topic buttons pull right
- topic buttons pull right
- added post index (zero-based, it's wrong but don't know how to fix it
yet) in post-header

--- a/less/topic.less
+++ b/less/topic.less
@@ -209,10 +209,15 @@
       border-left: 1px solid #cf246a;
       border-right: 1px solid #ff942e;
 
-			.post-time {
+			.post-meta {
 				float: right;
 				color: white;
 				padding: 5px;
+
+				.post-index a {
+					color: white;
+					font-weight: bold;
+				}
 			}
     }
 
