share and admin buttons
- remove share button
- move admin button right, with margin

--- a/less/topic.less
+++ b/less/topic.less
@@ -226,6 +226,10 @@
       border: 0;
       border-bottom: 1px solid rgba(0, 0, 0, 0.06);
       padding: 8px 9px 7px 23px;
+
+			.post-tools {
+				margin-left: 10px;
+			}
     }
 
 		.post-block {
