--- a/less/header.less
+++ b/less/header.less
@@ -259,6 +259,10 @@
 		.container-fluid {
 			padding: 0;
 		}
+		
+		i.fa {
+			color: white;
+		}
 	}
 	#header-menu.affix {
 	    margin:0;
@@ -471,4 +475,16 @@
 	background: #c91106;
 	padding: 1px 2px;
 	font-family: @font-family-sans-serif;
+}
+
+.notransition {
+	transition: none !important;
+}
+
+.header .header-topic-title {
+	text-align: center;
+	
+	span {
+		color: white;
+	}
 }
