--- a/less/header.less
+++ b/less/header.less
@@ -260,8 +260,20 @@
 			padding: 0;
 		}
 		
-		i.fa {
+		.pagination-block i.fa {
 			color: white;
+		}
+		
+		.navbar-nav > li > a {
+			color: #ccc;
+		}
+		
+		.navbar-nav > li > a:hover, .pagination-block i.fa:hover, .navbar-nav > li > a:focus, .pagination-block i.fa:focus{
+			color: white;
+		}
+		
+		.navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
+			background-color:#232323;
 		}
 	}
 	#header-menu.affix {
@@ -272,10 +284,7 @@
 	    transition:all 0.5s ease;
 	    top: 0;
 	}
-	#header-menu .navbar-nav > li > a:hover,#header-menu .navbar-nav > li > a:focus {
-	    color:#929292;
-	    background-color:#232323;
-	}
+	
 }
 .header {
 
