--- a/less/profile.less
+++ b/less/profile.less
@@ -30,3 +30,11 @@ ul.usermenu {
 .panel-body {
 	padding: 5px;
 }
+h4.user-stats {
+	background-color: #e8e8e8;
+	text-align: left;
+	padding: 9px;
+	width: 104%;
+	margin-left: -5px;
+	color: @exodo-dark;
+}
