search input outline fix

--- a/less/header.less
+++ b/less/header.less
@@ -42,6 +42,9 @@
                     vertical-align:middle;
                     padding:1px;
                 }
+                input.textbox:focus {
+                    outline: none;
+                }
             }
         }
         #toplinks {
