search button outline fix

--- a/less/header.less
+++ b/less/header.less
@@ -27,6 +27,9 @@
                 background:url("https://exo.do/images/exodo/misc/search-button-bg.png") no-repeat left 0;
                 background-attachment:scroll;
             }
+            .searchbutton:focus {
+                outline: none;
+            }
             .searchbutton:hover {
                 background:url("https://exo.do/images/exodo/misc/search-button-bg.png") no-repeat left -26px;
             }
