Profile minor changes

--- a/less/profile.less
+++ b/less/profile.less
@@ -2,11 +2,10 @@ h2.blocksubhead {
 	height: 48px;
 	width: 104%;
 	margin-left: -5px;
-	border: 1px solid #222;
-	background-color: #2E3539;
+	background-color: #e8e8e8;
 	line-height: 48px;
-	font-size: 14px;
-	color: #fff;
+	font-size: 15px;
+	color: @exodo-dark;
 	padding-left: 10px;
 	margin-top: -5px;
 }
