--- a/less/topic.less
+++ b/less/topic.less
@@ -203,6 +203,7 @@
 
     .post-header {
       height: 34px;
+      line-height: 23px;
       width: 100%;
       display: block;
       background: linear-gradient(to right, rgba(207, 36, 106, 1) 0%, rgba(255, 148, 46, 1) 100%) repeat scroll 0 0 rgba(0, 0, 0, 0);
