--- a/less/header.less
+++ b/less/header.less
@@ -319,9 +319,10 @@
 	}
 
 	.header-topic-title {
-		text-align: right;
+		text-align: center;
+		font-style: italic;
 		padding: 15px 15px;
-		font-size: 18px;
+		font-size: 13px;
 		line-height: 20px;
 		text-overflow: ellipsis;
 		overflow: hidden;
@@ -329,7 +330,7 @@
 		span {
 			text-overflow: ellipsis;
 			white-space: nowrap;
-			color: @brand-primary;
+			color: @exodo-lightdark;
 		}
 	}
 
@@ -494,12 +495,4 @@
 
 .notransition {
 	transition: none !important;
-}
-
-.header .header-topic-title {
-	text-align: center;
-	
-	span {
-		color: white;
-	}
 }
