Cambios para el plugin de ignorar usuarios

--- a/less/account.less
+++ b/less/account.less
@@ -114,3 +114,39 @@
 		width:100px;
 	}
 }
+
+.users.account {
+	
+	.user-info {
+		display: inline-block;
+		text-align: left;
+		
+		> a, > div, > button {
+			margin: 3px;
+		}
+		
+		> a {
+			max-width: 130px;
+			font-size: 22px;
+			display: inline-block;
+		}
+		
+		> button.btn {
+			padding: 3px 8px;
+		}
+	}
+	
+	.users-box {
+		width: 290px;
+		padding: 10px;
+		
+		> a {
+			vertical-align: top;
+		}
+		
+		img {
+			width: 120px;
+			height: 120px;
+		}
+	}
+}
