[Category] More topic images
- hot + locked
- hot + locked + participated

--- a/less/category.less
+++ b/less/category.less
@@ -212,6 +212,8 @@
 .category-item.locked .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_lock-30.png"); }
 .category-item.unread.locked .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_lock_new-30.png"); }
 .category-item.hot .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_hot-30.png"); }
+.category-item.hot.locked .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_hot_lock-30.png"); }
+.category-item.hot.locked.participated .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_dot_hot_lock-30-right.png"); }
 .category-item.hot.unread .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_hot_new-30.png"); }
 .category-item.hot.participated .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_dot_hot-30-right.png"); }
 .category-item.hot.unread.participated .threadstatus { background-image: url("https://exo.do/images/exodo/statusicon/thread_dot_hot_new-30-right.png"); }
