[Category] Almost finished styling

--- a/less/bootstrap/variables.less
+++ b/less/bootstrap/variables.less
@@ -418,17 +418,17 @@
 //
 //##
 
-@pagination-color:                     @link-color;
+@pagination-color:                     @exodo-link-color;
 @pagination-bg:                        #fff;
 @pagination-border:                    #ddd;
 
-@pagination-hover-color:               @link-hover-color;
+@pagination-hover-color:               @exodo-link-hover-color;
 @pagination-hover-bg:                  @gray-lighter;
 @pagination-hover-border:              #ddd;
 
 @pagination-active-color:              #fff;
-@pagination-active-bg:                 @brand-primary;
-@pagination-active-border:             @brand-primary;
+@pagination-active-bg:                 @exodo-primary;
+@pagination-active-border:             @exodo-primary;
 
 @pagination-disabled-color:            @gray-light;
 @pagination-disabled-bg:               #fff;
