--- a/less/header.less
+++ b/less/header.less
@@ -447,6 +447,7 @@
 
 
 .breadcrumb {
+	margin-bottom: 10px;
 	li {
 		max-width: 100%;
 		.text-ellipsis;
@@ -495,4 +496,9 @@
 
 .notransition {
 	transition: none !important;
+}
+
+// [@korros] temp fix
+.col-xs-12:first-child {
+	display: none;
 }
