--- a/less/variables.less
+++ b/less/variables.less
@@ -6,17 +6,23 @@
 //== Colors
 //
 //## Brand colors for use across the theme.
+@exodo-primary:         	#CF246A;
+@exodo-secondary:       	#FF942E;
+@exodo-dark:         		#2E3539;
+@exodo-lightdark:			#8D8D8D;
+@exodo-lighterdark:			#E4E4E4;
+@exodo-gradient:			linear-gradient(to right, @exodo-primary 0px, @exodo-secondary 100%) repeat scroll 0px 0px transparent;
 
-@exodo-primary:         #CF246A;
-@exodo-secondary:       #FF942E;
-@exodo-dark:         	#2E3539;
-@exodo-lightdark:		#8D8D8D;
-@exodo-lighterdark:		#E4E4E4;
-@exodo-gradient:		linear-gradient(to right, @exodo-primary 0px, @exodo-secondary 100%) repeat scroll 0px 0px transparent;
+@exodo-bg-color: 			#F6F6F6;
+@exodo-text-color:			@exodo-dark;
+@exodo-link-color:			@exodo-primary;
+@exodo-link-hover-color:	@exodo-primary;
+@exodo-border-color:		@exodo-lighterdark;
 
-@exodo-bg-color: 		#F6F6F6;
-@exodo-text-color:		@exodo-dark;
-@exodo-link-color:		@exodo-primary;
-@exodo-border-color:	@exodo-lighterdark;
+@exodo-font-family:			"Open Sans",sans-serif;
 
-@exodo-font-family:		"Open Sans",sans-serif;
+//== Category
+@exodo-category-threadinfo-size:		61%;
+@exodo-category-threadstats-size:		13%;
+@exodo-category-threadlastpost-size:	23%;
+@exodo-category-threadimod-size:		3%;
