--- a/less/home.less
+++ b/less/home.less
@@ -1,5 +1,57 @@
 .home {
-	
+	.category-header {
+	    .pointer;
+	    height: 110px;
+	    margin: 0;
+	    margin-bottom: 10px;
+	    overflow: hidden;
+	    padding-top: 25px;
+	    text-align: center;
+	    width: 100%;
+	    &:hover {
+	        filter: brightness(115%);
+	        -webkit-filter: brightness(115%);
+	    }
+	    &.category-header-image-auto {
+	        background-position: 0% 0% !important;
+	        background-size: auto!important;
+	        -moz-background-size: auto!important;
+	        -o-background-size: auto!important;
+	        -webkit-background-size: auto!important;
+	    }
+	    &.category-header-image-cover {
+	        background-position: center!important;
+	        background-size: cover!important;
+	        -moz-background-size: cover!important;
+	        -o-background-size: cover!important;
+	        -webkit-background-size: cover!important;
+	    }
+	    &.category-header-image-contain {
+	        background-position: center!important;
+	        background-size: contain!important;
+	        -moz-background-size: contain!important;
+	        -o-background-size: contain!important;
+	        -webkit-background-size: contain!important;
+	    }
+	    .category-box {
+	        height: 90px;
+	        .post-preview {
+	            padding-left: 10px;
+	            padding-right: 10px;
+	            text-align: left;
+	            img {
+	                height: 60px;
+	                padding-right: 5px;
+	                width: 60px;
+	            }
+	            p {
+	                height: 60px;
+	                overflow: hidden;
+	                text-overflow: ellipsis;
+	            }
+	        }
+	    }
+	}
 }
 
 
