Corregir estilos relacionados con los perfiles de usuario

--- a/less/account.less
+++ b/less/account.less
@@ -139,6 +139,7 @@
 	.users-box {
 		width: 290px;
 		padding: 10px;
+		text-align: left;
 		
 		> a {
 			vertical-align: top;
@@ -149,4 +150,9 @@
 			height: 120px;
 		}
 	}
+}
+
+.account-block .panel-heading .account-username {
+	display: inline-block;
+	vertical-align: middle;
 }
